--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "selenium-boilerplate",
-  "version": "1.0.0",
-  "description": "",
+  "name": "selenium-typescript-boilerplate",
+  "version": "0.0.1",
+  "description": "Minimal Selenium-Typescript boilerplate",
   "main": "dist/app.js",
   "scripts": {
     "nodemon": "nodemon dist/app.js",
@@ -14,7 +14,6 @@
   "devDependencies": {
     "tslint": "^5.12.1",
     "typescript": "^3.3.3"
-
   },
   "dependencies": {
     "@types/selenium-webdriver": "^4.0.9",
